# toylib

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml  setup.py
Regression/: Elastic Net regression.ipynb  Interval Regression with elastic net.ipynb  Interval Regression.ipynb  Linear Regression.ipynb  Logistic Regression.ipynb
jax/: 01 linear regression 1 variable.ipynb  02 Neural Network tfds.ipynb  03. toylib skeleton.ipynb
nn/: 01. NN discriminative.ipynb  02. CNN image classification.ipynb  04. Attention for translation.ipynb  05. Transformer classification.ipynb  06. Image segmentation.ipynb  07. GAN.ipynb  08. Image-text embeddings.ipynb  09. Checkpointing.ipynb  10. Optimizers.ipynb  11. Style transfer.ipynb  12. Diffusion model for image.ipynb  13. Object detection.ipynb
notebooks/: 00. Jax: Linear regression in 1 variable.ipynb  01. NN discriminative.ipynb  01. Toylib.ipynb  06. GAN - MNIST - pytorch.ipynb  stable_diffusion.ipynb
notebooks/toylib/: 01. Toylib.ipynb  02. NN discriminative.ipynb  03. Text Classification - BOW Glove + MLP.ipynb  04. Text Classification - Attention + Glove.ipynb  06. ConvNet - MNIST.ipynb  07. GAN - MNIST.ipynb
toylib/: __init__.py  trainer.py
toylib/data/: imdb.py
toylib/nn/: __init__.py  attention.py  attention_test.py  layers.py  layers_test.py  linear.py  mlp.py  module.py  module_test.py  test_attention.py  test_layers.py  test_module.py
toylib_projects/: bundler.md  bundler.py
toylib_projects/bundler/: bundler.py  bundler_test.py  bundler_v2.py  pyproject.toml  test_bundler.py
toylib_projects/bundler/test_data/: entrypoint.py
toylib_projects/dotsAndBoxes/: dots_and_boxes.py  game.ipynb  gametypes.py  mcts.py  mcts_dev.ipynb  players.py  pyproject.toml  test_dots_and_boxes.py  test_gametypes.py  test_mcts.py  test_mcts_dots_and_boxes.py
toylib_projects/dotsAndBoxes/interfaces/: flask_ui.py  visualize.py
toylib_projects/tinystories/: README.md  Train.ipynb  analyze.py  bundled_output.py  data.py  data_test.py  decoder_only_model.py  decoder_only_model_test.py  experiment.py  experiment_test.py  foo.ipynb  logger.py  metrics.py  metrics_test.py  model.py  model_test.py  multi_optimizer_example.py  pyproject.toml  run_tokenize.py  test_data.py  test_experiment.py  test_model.py  tokenize.py  train.py  train_test.py
toylib_projects/tinystories/data/: .gitignore
toylib_projects/tinystories/scripts/: compile.py  core_eval.py  core_eval_test.py  download_data.py  e2e.sh
toylib_projects/tinystories/tokenizer/: bytes_per_token.py  run_tokenize.py  tokens_per_byte.py
toylib_projects/wm/: .gitignore  CLAUDE.md  README.md  dataloader.py  dataloader_test.py  dataset.md  experiment.py  experiment_test.py  logger_test.py  metrics.py  metrics_test.py  plan.md  pyproject.toml
toylib_projects/wm/datagen/: breakout.py  breakout_test.py  controller.py  generate_matrix.py  generate_raw.py  generate_vision_enc_data.py  preprocess_frames.py  preprocess_test.py  run_stage1.py  storage.py
toylib_projects/wm/docs/: dataset.md  plan.md  report.md  walkthrough_guidelines.md
toylib_projects/wm/docs/designs/: dataset.md  plan.md  vision_codec.md
toylib_projects/wm/docs/walkthroughs/: a1_vision_codec.md
toylib_projects/wm/probe/: model.py  probe_test.py  train.py
toylib_projects/wm/scripts/: calib_ball_labels.py  datagen.sh  sample_h5.py  viz_ball_labels.py
toylib_projects/wm/vision_encoder/: analyze.py  colab_eval_example.ipynb  dataloader.py  dataloader_test.py  evaluate.py  experiment.py  experiment_test.py  inference.py  inference_metrics_test.py  logger.py  logger_test.py  metrics.py  metrics_test.py  model.py  model_test.py  train.py
toylib_projects/wm/viz/: __init__.py  cli.py  loader.py  matrix.py  render.py  viz_test.py
