[project]
name = "toylib"
version = "0.0.1"
authors = [
  { name="Anuj Khare", email="khareanuj18@gmail.com" },
]
description = "A toy NN package to learn how to build stuff!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.0",
    "jaxtyping>=0.2.0",
    "beartype>=0.15.0",
    "einops>=0.6.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "nltk>=3.8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "tensorboardX>=2.6.0",
    "torch>=2.0.0",  # for DataLoader utilities
]

[project.urls]
Homepage = ""
Issues = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["toylib/*"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
