[project]
name = "toylib"
version = "0.0.1"
authors = [
  { name="Anuj Khare", email="khareanuj18@gmail.com" },
]
description = "A toy NN package to learn how to build stuff!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.0",
    "jaxtyping>=0.2.0",
    "beartype>=0.15.0",
    "einops>=0.6.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "nltk>=3.8.0",
    "wandb>=0.25.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "tensorboardX>=2.6.0",
    "torch>=2.0.0",  # for DataLoader utilities
]
tinystories = [
    "transformers>=4.30.0",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.4.0",
    "grain>=0.0.4",
    "pyarrow>=12.0.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
]
dotsandboxes = [
    "matplotlib>=3.7.0",
]
dotsandboxes-web = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]

[project.urls]
Homepage = ""
Issues = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["toylib/*"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.uv.workspace]
members = [
    "toylib_projects/bundler",
    "toylib_projects/tinystories",
    "toylib_projects/dotsAndBoxes",
]
