[project]
name = "toylib-bundler"
version = "0.0.1"
authors = [
  { name="Anuj Khare", email="khareanuj18@gmail.com" },
]
description = "Code bundler utility using toylib"
requires-python = ">=3.10"
dependencies = [
    "toylib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.uv.sources]
toylib = { workspace = true }