[project]
name = "toylib-dotsandboxes"
version = "0.0.1"
authors = [
  { name="Anuj Khare", email="khareanuj18@gmail.com" },
]
description = "Dots and Boxes game with MCTS player using toylib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]
web = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[tool.uv.sources]
toylib = { path = "../..", editable = true }