[project]
name = "toylib-tinystories"
version = "0.0.1"
authors = [
  { name="Anuj Khare", email="khareanuj18@gmail.com" },
]
description = "TinyStories GPT-2 implementation using toylib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toylib @ file:///${PROJECT_ROOT}/../..",
    "jax>=0.4.0",
    "jaxtyping>=0.2.0",
    "einops>=0.6.0",
    "numpy>=1.24.0",
    "transformers>=4.30.0",  # for AutoTokenizer
    "optax>=0.1.7",
    "orbax-checkpoint>=0.4.0",
    "grain-python>=0.0.4",
    "pyarrow>=12.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[tool.uv.sources]
toylib = { path = "../..", editable = true }