[project]
name = "toylib-tinystories"
version = "0.0.1"
authors = [
  { name="Anuj Khare", email="khareanuj18@gmail.com" },
]
description = "TinyStories GPT-2 implementation using toylib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toylib",
    "transformers>=4.30.0",  # for AutoTokenizer
    "optax>=0.1.7",
    "orbax-checkpoint>=0.4.0",
    "grain>=0.0.4",
    "pyarrow>=12.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[tool.uv.sources]
toylib = { workspace = true }