[project]
name = "toylib-wm"
version = "0.0.1"
authors = [
  { name="Anuj Khare", email="khareanuj18@gmail.com" },
]
description = "Text + action-conditioned video world model in JAX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toylib",
    "gymnasium[atari]>=1.0.0",
    "ale-py>=0.10.0",
    "h5py>=3.10.0",
    "hdf5plugin>=4.0.0",  # provides LZ4 + zstd filters for h5py
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    # viz
    "pillow>=10.0.0",     # animated WebP encoding
    "matplotlib>=3.7.0",  # state-over-time charts
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.uv.sources]
toylib = { workspace = true }
